--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
 <div class="w3-row w3-margin">
 
 <div class="w3-third">
-  <img src="img/img_5terre.jpg" style="width:100%;min-height:200px">
+  <img src="img/img_El-Nido.jpg" style="width:100%;min-height:200px">
 </div>
 <div class="w3-twothird w3-container">
-  <h2>5 Terre</h2>
+  <h2>El-Nido</h2>
   <p>
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+  From the towering marble cliffs and enchanting lagoons to its 100 white sandy beaches, lush jungle and mangrove forest, prehistoric caves and waterfalls, El Nido is one of the top tourist destinations in Palawan, which is often referred to as the "Philippines' Last Frontier".
+  
   </p>
 </div>
 
@@ -27,12 +28,13 @@
 <div class="w3-row w3-margin">
 
 <div class="w3-third">
-  <img src="img/img_monterosso.jpg" style="width:100%;min-height:200px">
+  <img src="img/img_Boracay.jpg" style="width:100%;min-height:200px">
 </div>
 <div class="w3-twothird w3-container">
-  <h2>Monterosso</h2>
+  <h2>Boracay</h2>
   <p>
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+  Boracay Island, one of the top beaches in the Philippines, is blessed with a long stretch of powdery white sand beach (called White Beach), crystal clear and azure waters, a stunning sunset and more. The island doesn't fall short on adventures and activities for people of all ages.
+ 
   </p>
 </div>
 
@@ -40,12 +42,26 @@
 <div class="w3-row w3-margin">
 
 <div class="w3-third">
-  <img src="img/img_vernazza.jpg" style="width:100%;min-height:200px">
+  <img src="img/img_Bohol.jpg" style="width:100%;min-height:200px">
 </div>
 <div class="w3-twothird w3-container">
-  <h2>Vernazza</h2>
+  <h2>Bohol</h2>
   <p>
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+   Bohol (Tagalog pronunciation: [bɔˈhɔl]) is an island province of the Philippines located in the Central Visayas region, consisting of the island itself and 75 minor surrounding islands. Its capital is Tagbilaran.
+ 
+</div>
+
+</div>
+<div class="w3-row w3-margin">
+
+<div class="w3-third">
+  <img src="img/img_Coron.jpg" style="width:100%;min-height:200px">
+</div>
+<div class="w3-twothird w3-container">
+  <h2>Coron</h2>
+  <p>
+ Coron is best known for world-class World War II-era wreck diving, the island also offers limestone karst landscapes, beautiful beaches, crystal-clear freshwater lakes, and shallow-water coral reefs. Coron is a separate group of islands from the main Palawan island.
+ 
   </p>
 </div>
 
@@ -53,39 +69,26 @@
 <div class="w3-row w3-margin">
 
 <div class="w3-third">
-  <img src="img/img_manarola.jpg" style="width:100%;min-height:200px">
+  <img src="img/img_Port-Barton.jpg" style="width:100%;min-height:200px">
 </div>
 <div class="w3-twothird w3-container">
-  <h2>Manarola</h2>
+  <h2>Port Barton</h2>
   <p>
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-  </p>
+ Port Barton is a village on the north-west coast of the island of Palawan in the Philippines. It's about 23km north-west of Roxas. Port Barton is a quieter, smaller, and more laid-back version of El Nido.
+  
 </div>
 
 </div>
 <div class="w3-row w3-margin">
 
 <div class="w3-third">
-  <img src="img/img_corniglia.jpg" style="width:100%;min-height:200px">
+  <img src="img/img_Badian.jpg" style="width:100%;min-height:200px">
 </div>
 <div class="w3-twothird w3-container">
-  <h2>Corniglia</h2>
+  <h2>Badian, Cebu, Philippines</h2>
   <p>
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-  </p>
-</div>
-
-</div>
-<div class="w3-row w3-margin">
-
-<div class="w3-third">
-  <img src="img/img_riomaggiore.jpg" style="width:100%;min-height:200px">
-</div>
-<div class="w3-twothird w3-container">
-  <h2>Riomaggiore</h2>
-  <p>
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-  </p>
+   Badian is one of the municipalities located in South Cebu. It is a 3rd municipal income class municipality and has a population of 37,912. Its main barangay is Poblacion which is located in the center of the town and is the only urban and most populous barangay of Badian. 
+ 
 </div>
 
 </div>
